<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.arcadia.wearapp.WearDescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_text"
                style="@style/Base.Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/name_hint"
                android:textSize="@dimen/abc_text_size_large_material" />

            <ImageButton
                android:id="@+id/clear_name_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/background_material_light"
                android:paddingEnd="@dimen/abc_button_padding_horizontal_material"
                android:paddingStart="@dimen/abc_button_padding_horizontal_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/start_date_layout"
            android:paddingTop="@dimen/abc_item_padding_vertical_material"
            android:text="Start"
            android:textColor="@color/abc_secondary_text_material_light"
            android:textSize="@dimen/text_size_secondary_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_date"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/select_date_hint" />

            <TextView
                android:id="@+id/start_time"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/select_time_hint" />

            <ImageButton
                android:id="@+id/clear_start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_material_light"
                android:padding="@dimen/abc_button_padding_horizontal_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/end_date_layout"
            android:paddingTop="@dimen/abc_item_padding_vertical_material"
            android:text="End"
            android:textColor="@color/abc_secondary_text_material_light"
            android:textSize="@dimen/text_size_secondary_material" />

        <LinearLayout
            android:id="@+id/end_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_date"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/select_date_hint" />

            <TextView
                android:id="@+id/end_time"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/select_time_hint" />

            <ImageButton
                android:id="@+id/clear_end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background_material_light"
                android:padding="@dimen/abc_button_padding_horizontal_material"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <EditText
            android:id="@+id/description_text"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Description"
            android:textSize="@dimen/text_size_primary_material" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/repeat_spinner"
                android:paddingTop="@dimen/abc_item_padding_vertical_material"
                android:text="@string/repeat_rule_text"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="@dimen/text_size_secondary_material" />

            <Spinner
                android:id="@+id/repeat_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeat_until_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/repeat_until_spinner"
                    android:paddingTop="@dimen/abc_item_padding_vertical_material"
                    android:text="Until"
                    android:textColor="@color/abc_secondary_text_material_light"
                    android:textSize="@dimen/text_size_secondary_material" />

                <Spinner
                    android:id="@+id/repeat_until_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/repeat_until_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/repeat_until_date"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/select_date_hint" />

                <TextView
                    android:id="@+id/repeat_until_time"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/select_time_hint" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reminders_text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/spinner_layout"
                android:paddingTop="@dimen/abc_item_padding_vertical_material"
                android:text="@string/reminders_label_text"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="@dimen/text_size_secondary_material" />

            <ImageButton
                android:id="@+id/add_remind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/background_material_light"
                android:padding="@dimen/abc_button_padding_horizontal_material"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_add"
                android:visibility="gone"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminders_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>